2009-11-06  Dirk Schulze  <krit@webkit.org>

Reviewed by Nikolas Zimmermann.

        feMorphology filter is not implemented
        [https://bugs.webkit.org/show_bug.cgi?id=5863]

        The Implementation of feMorphology.

        Test: We have allready a test for feMorphology
              svg/W3C-SVG-1.1/filters-morph-01-f.svg

        * svg/graphics/filters/SVGFEMorphology.cpp:
        (WebCore::FEMorphology::apply):


Canonical link: https://commits.webkit.org/42034@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50604 268f45cc-cd09-0410-ab3c-d52691b4dbfc